--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="actions">
         <button id="start">Start Game</button>
         <button id="pause">Pause Game</button>
+        <button id="fps-display">Toggle FPS</button>
       </div>
     </div>
     <script type="module" src="/src/js/game.ts"></script>
