--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./public/vite.svg">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
     <title>Shootey Wavey</title>
   </head>
   <body>
-    <div id="shootey-wavey">
-      <div class="actions">
-        <button id="start">Start Game</button>
-        <button id="pause">Pause Game</button>
-        <button id="fps-display">Toggle FPS</button>
-      </div>
-    </div>
-    <script type="module" src="/src/js/game.ts"></script>
+    <div id="shootey-wavey"></div>
+    <script type="module" src="./src/js/main.ts"></script>
   </body>
 </html>
