--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./public/vite.svg">
     <link rel="stylesheet" href="./src/assets/css/style.css">
-    <title>Shootey Wavey</title>
+    <title>RoguePunk</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="src/main.ts"></script>
-    <!-- 
-      <div id="test-container" style="display: flex; gap: 1rem; flex-direction: column; position: absolute; top: 5px; left: 5px; width: fit-content; background-color: rgba(0,0,0, 0.25); padding: 5px; z-index: 50;"></div>
-      <div id="shootey-wavey"></div>
-      <script type="module" src="./src/js/main.ts"></script>
-    -->
   </body>
 </html>
